--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="description" content="Averiguá si sos un boludle. El wordle argentino"/>
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-DW4L6XK6P0"
