--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="description" content="Averiguá si sos un Boludle en el Wordle del mejor país"/>
+    <meta
+      name="description"
+      content="Averiguá si sos un Boludle en el Wordle del mejor país"
+    />
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-DW4L6XK6P0"
